# AI-Suite-VST

./: AGENTS.md  CMakeLists.txt  README.md
build-codex-check/JUCE/tools/: Makefile
build-codex-check/JUCE/tools/modules/: Makefile
libs/ui/: CMakeLists.txt
libs/ui/include/ai_ui/: DBMeter.h  ModernLookAndFeel.h  ParameterTooltip.h
libs/ui/src/: DBMeter.cpp  ModernLookAndFeel.cpp  ParameterTooltip.cpp
plugins/: CMakeLists.txt
plugins/AnalogEQ/: CMakeLists.txt
plugins/AnalogEQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AnalogEQ/Source/DSP/: FilterBase.h  FilterChain.cpp  FilterChain.h  FilterTypes.h
plugins/AnalogEQ/Source/UI/: FilterControlPanel.cpp  FilterControlPanel.h  FilterNode.cpp  FilterNode.h  FrequencyResponseCurve.cpp  FrequencyResponseCurve.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
plugins/AnalogEQ/Source/Utils/: ParameterHelper.cpp  ParameterHelper.h
